Update index.html github link

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     </header>
 
     <footer>
-        <a href="https://github.com/poonchoi">[click me!]</a>
+        <a href="https://github.com/danielegolzio">[github]</a>
     </footer>
 </body>
