--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <P>[COMING SOON]</P>
     </header>
-
+        <P>[COMING SOON]</P>
     <footer>
         <a href="https://github.com/danielegolzio">[github]</a>
     </footer>
