--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 
 <body>
-    <header>
+<!--     <header>
         <P>[COMING SOON]</P>
-    </header>
+    </header> -->
         <P>[COMING SOON]</P>
     <footer>
         <a href="https://github.com/danielegolzio">[github]</a>
