--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
 </head>
 
 <body>
-<!--     <header>
+    <header>
         <P>[COMING SOON]</P>
-    </header> -->
-        <P>[COMING SOON]</P>
+    </header>
     <footer>
         <a href="https://github.com/danielegolzio">[github]</a>
     </footer>
