--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 
 <body>
-    <header>
-        <P>[COMING SOON]</P>
-    </header>
+    <div class="parent">
+        <header>[COMING SOON]</header>
+    </div>
     <footer>
         <a href="https://github.com/danielegolzio">[github]</a>
     </footer>
