--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-        <header>[COMING SOON]</header>
+        <header><p>[COMING SOON]</p></header>
     <footer>
         <a href="https://github.com/danielegolzio">[github]</a>
     </footer>
