--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <h1>[Contact]</h1>
-        <p><a href="index.html" class="index">[Daniele Golzio]</a></p>
+        <p><a href="index.html" class="main">[Daniele Golzio]</a></p>
     </header>
     <div class="contact">
         <p>[<a href="https://github.com/danielegolzio" class="main">github</a> -- <a href="mailto:danielegolzio@gmail.com" class="main">email</a> -- <a href="https://www.linkedin.com/in/daniele-golzio/" class="main">linkedin</a> -- <a href="mailto:danielegolzio@gmail.com" class="main">email</a> -- <a href="resume.pdf" class="main">resume</a>]</p>
