--- a/index.html
+++ b/index.html
@@ -20,27 +20,31 @@
     <div class="gallery" id="gallery-container">
     </div>
 
+
     <script>
         const galleryContainer = document.getElementById('gallery-container');
 
+        // Define your image folders and the number of images in each
         const imageFolders = [
             { folder: '/images/boat+greece-2023-fuji', count: 33 },
             { folder: '/images/first-roll-2023', count: 21 },
             { folder: '/images/greece-2023-ilford-delta', count: 33 },
             { folder: '/images/kings-night-2023', count: 33 },
             { folder: '/images/dolomiti-2023-p1', count: 38 },
-            { folder: '/images/dolomiti-2023-p2', count: 38 },
-            { folder: '/images/torino-23', count: 35 }
+            { folder: '/images/dolomiti-2023-p2', count: 38 }
         ];
 
+        // Create an array to hold all image paths
         const images = [];
 
+        // Populate the images array with paths from each folder
         for (let folder of imageFolders) {
             for (let i = 1; i <= folder.count; i++) {
                 images.push(`${folder.folder}/img${i}.jpg`);
             }
         }
 
+        // Shuffle the images array before loading them
         function shuffle(array) {
             for (let i = array.length - 1; i > 0; i--) {
                 const j = Math.floor(Math.random() * (i + 1));
@@ -49,7 +53,9 @@
             return array;
         }
 
-        async function loadImages() {
+        // Load images after shuffling
+        function loadImages() {
+            // Shuffle the images before displaying them
             shuffle(images);
 
             for (let i = 0; i < images.length; i++) {
@@ -68,7 +74,8 @@
             }
         }
 
-        loadImages();
+        // Shuffle and load images when the page is ready
+        document.addEventListener('DOMContentLoaded', loadImages);
     </script>
 </body>
 
