rotation of images + colorscheme + font + contact box css

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
     <header>
-        <h1>[Daniele Golzio]</h1>
-        <p><a class="main" href="contact.html">[contact]</a></p>
+        <h1>Daniele Golzio</h1>
+        <p><a class="main" href="contact.html">Contact</a></p>
     </header>
 
     <div class="gallery" id="gallery-container">
@@ -24,7 +24,6 @@
     <script>
         const galleryContainer = document.getElementById('gallery-container');
 
-        // Define your image folders and the number of images in each
         const imageFolders = [
             { folder: '/images/boat+greece-2023-fuji', count: 33 },
             { folder: '/images/first-roll-2023', count: 21 },
@@ -34,17 +33,14 @@
             { folder: '/images/dolomiti-2023-p2', count: 38 }
         ];
 
-        // Create an array to hold all image paths
         const images = [];
 
-        // Populate the images array with paths from each folder
         for (let folder of imageFolders) {
             for (let i = 1; i <= folder.count; i++) {
                 images.push(`${folder.folder}/img${i}.jpg`);
             }
         }
 
-        // Shuffle the images array before loading them
         function shuffle(array) {
             for (let i = array.length - 1; i > 0; i--) {
                 const j = Math.floor(Math.random() * (i + 1));
@@ -53,9 +49,7 @@
             return array;
         }
 
-        // Load images after shuffling
         function loadImages() {
-            // Shuffle the images before displaying them
             shuffle(images);
 
             for (let i = 0; i < images.length; i++) {
@@ -74,7 +68,6 @@
             }
         }
 
-        // Shuffle and load images when the page is ready
         document.addEventListener('DOMContentLoaded', loadImages);
     </script>
 </body>
