dynamic column count

--- a/contact.html
+++ b/contact.html
@@ -17,11 +17,11 @@
         <p><a href="index.html" class="main">Daniele Golzio</a></p>
     </header>
     <div class="contact">
-        <a href="https://github.com/danielegolzio" class="main">github</a>
-        <a href="mailto:danielegolzio@gmail.com" class="main">email</a>
-        <a href="https://www.linkedin.com/in/daniele-golzio/" class="main">linkedin</a>
-        <a href="mailto:danielegolzio@gmail.com" class="main">email</a>
-        <a href="resume.pdf" class="main">resume</a>
+        <a href="mailto:danielegolzio@gmail.com" class="main">Email</a>
+        <a href="resume.pdf" class="main">Resume</a>  
+        <a href="https://github.com/danielegolzio" class="main">Github</a>
+        <a href="https://www.linkedin.com/in/daniele-golzio/" class="main">LinkedIn</a>
+        
     </div>
 
 </body>
