--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             { folder: '/images/greece-2023-ilford-delta', count: 33 },
             { folder: '/images/kings-night-2023', count: 33 },
             { folder: '/images/dolomiti-2023-p1', count: 38 },
-            { folder: '/images/dolomiti-2023-p2', count: 38 }
+            { folder: '/images/dolomiti-2023-p2', count: 38 },
+            { folder: '/images/torino-23', count: 35 }
         ];
 
         const images = [];
