--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -18,8 +18,8 @@
 
     <div class="main" id="main">
       <a href="mailto:danielegolzio@gmail.com">email</a>
-      <a href="linkeding">LinkedIn</a>
-      <a href="github.com/danielegolzio">github</a>
+      <a href="https://www.linkedin.com/in/daniele-golzio/">LinkedIn</a>
+      <a href="https://github.com/danielegolzio">github</a>
     </div>
   </body>
 </html>
