--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -16,7 +16,46 @@
       <a href="../../index.html">home/</a>
     </div>
 
-    <div class="gallery" id="gallery"></div>
-    <script src="imageLoader.js"></script>
+    <div class="projects-grid">
+
+      <a
+        class="project-link"
+        href="https://github.com/danielegolzio/3D-GRAPHICS-ENGINE"
+        target="_blank"
+        rel="noopener"
+      >
+        <div class="project">
+          <div class="project-image">
+            <img src="../../images/cow.webp" alt="Project preview" />
+          </div>
+          <div class="project-info">
+            <p class="project-title">PG3D</p>
+            <p class="project-desc">Python 3D graphics library</p>
+          </div>
+        </div>
+      </a>
+
+      <a
+        class="project-link"
+        href="https://github.com/danielegolzio/ducks"
+        target="_blank"
+        rel="noopener"
+      >
+        <div class="project">
+          <div class="project-image">
+            <img src="../../images/ducks.jpg" alt="Project preview" />
+          </div>
+          <div class="project-info">
+            <p class="project-title">ducks!</p>
+            <p class="project-desc">...</p>
+          </div>
+        </div>
+      </a>
+
+
+    </div>
+    
+    <!-- <div class="gallery" id="gallery"></div>
+    <script src="imageLoader.js"></script> -->
   </body>
 </html>
